8187100: Support Unicode Variation Selectors

Support Unicode Variation Selectors

Reviewed-by: prr, srl